--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,19 @@ jobs:
       run: composer install --no-dev --optimize-autoloader
 
     # Step 4: Upload code to EC2
+    - name: Deploy to EC2
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.AWS_SSH_KEY }}
+        HOST: ${{ secrets.AWS_HOST }}
+        USER: ${{ secrets.AWS_USER }}
+      run: |
+        echo "HOST: $HOST"
+        echo "USER: $USER"
+        mkdir -p ~/.ssh
+        echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        ssh-keyscan -H $HOST >> ~/.ssh/known_hosts
+        scp -r ./ $USER@$HOST:/var/www/interview-backend
 
     # Step 5: SSH into EC2 and finalize deployment
     - name: Finalize deployment
