--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,9 @@ jobs:
         HOST: ${{ secrets.AWS_HOST }}
         USER: ${{ secrets.AWS_USER }}
       run: |
-        echo ${{secrets.AWS_HOST }} | sed 's/./& /g'
+        echo "${{secrets.AWS_HOST }}"
+        echo "${{secrets.AWS_USER }}"
+        echo "${{secrets.AWS_SSH_KEY }}"
         mkdir -p ~/.ssh
         echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
